crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__crucible_eav_schema.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT a.*
FROM entities a
JOIN relations e0 ON e0.from_entity_id = a.path
JOIN entities b ON b.path = CASE WHEN e0.from_entity_id = a.path THEN e0.to_entity_id ELSE e0.from_entity_id END
WHERE e0.relation_type = :edge_type_0
  AND a.title = :source_title
