crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__filter_contains.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT * FROM notes
WHERE title LIKE :filter_0 ESCAPE '\\'
