crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__filter_ends_with.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT * FROM notes
WHERE path LIKE :filter_0 ESCAPE '\\'
