crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__filter_eq.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT * FROM notes
WHERE folder = :filter_0
