crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__find_by_path.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT * FROM notes
WHERE path = :path
