crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__pipeline_sql_sugar_neighbors.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT n0.*
FROM notes n0
JOIN edges e0 ON (e0.source = n0.path OR e0.target = n0.path)
WHERE e0.type = :edge_type_0
  AND n0.title = :source_title
